// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`simulation/anvil createAnvilCliOptions() it should work for {"forkUrl":"http://hotmail.com/mainnet","blockTime":1} 1`] = `
[
  "--fork-url",
  "http://hotmail.com/mainnet",
  "--block-time",
  "1",
]
`;

exports[`simulation/anvil createAnvilCliOptions() it should work for {"forkUrl":"http://hotmail.com/mainnet","pruneHistory":false} 1`] = `
[
  "--fork-url",
  "http://hotmail.com/mainnet",
]
`;

exports[`simulation/anvil createAnvilCliOptions() it should work for {"host":"0.0.0.0"} 1`] = `
[
  "--host",
  "0.0.0.0",
]
`;

exports[`simulation/anvil createAnvilCliOptions() it should work for {"host":"localhost","port":7777} 1`] = `
[
  "--host",
  "localhost",
  "--port",
  "7777",
]
`;

exports[`simulation/anvil createAnvilCliOptions() it should work for {"mnemonic":"oh boi oh boi oh boi oh boi oh boi oh boi","count":6} 1`] = `
[
  "--mnemonic",
  "oh boi oh boi oh boi oh boi oh boi oh boi",
  "--count",
  "6",
]
`;

exports[`simulation/anvil createAnvilCliOptions() it should work for {"mnemonic":"oh boi oh boi oh boi oh boi oh boi oh boi"} 1`] = `
[
  "--mnemonic",
  "oh boi oh boi oh boi oh boi oh boi oh boi",
]
`;

exports[`simulation/anvil createAnvilCliOptions() it should work for {"port":7777} 1`] = `
[
  "--port",
  "7777",
]
`;

exports[`simulation/anvil createAnvilCliOptions() it should work for {"pruneHistory":true} 1`] = `
[
  "--prune-history",
]
`;
